# SSDA-SingleModel

./: .gitignore  NOTICE  README.md  dockerfile.ssda  experiment_multilabel_ssda.py  experiment_shot_ssda.py  pyproject.toml
Benchmark/CODEAE/: drug_ft_multilabel_hyper_main.py  pretrain_multilabel_hyper_main.py  train_code_adv.py
Benchmark/CODEAE/codeae_multilabel/: __init__.py  config.py  contracts.py  io.py  seed.py  validators.py
Benchmark/CODEAE/codeae_multilabel/data/: cancer_type.py  dataloader.py  dataset.py  drug_index.py  omics.py  prepare_finetune.py  prepare_pretrain.py  response_matrix.py  sample_id.py  split.py  subsample.py
Benchmark/CODEAE/codeae_multilabel/evaluation/: fold_summary.py  metrics.py  prediction.py  reports.py
Benchmark/CODEAE/codeae_multilabel/export/: artifacts.py  latent.py  latent_eval.py  visualization.py
Benchmark/CODEAE/codeae_multilabel/model/: checkpoint.py  heads.py  legacy_adapter.py  wrapper.py
Benchmark/CODEAE/codeae_multilabel/smoke/: smoke_commands.md  smoke_runner.py
Benchmark/CODEAE/codeae_multilabel/training/: codeae_loss_adapter.py  losses.py  runners.py  selection.py  train_state.py  trainer.py
Benchmark/CODEAE/model_save/: train_params.json
Datasets/: n_shot.py  preprocess_benchmark.py  split_data.py
docs/: IMPLEMENTATION_LOG.md  design.md  design_codeae.md  implementation_decisions.md  implementation_report.md  implementation_report_codeae.md  prompt.md  prompt_codeae.md  proposal.md  proposal_codeae.md
scripts/: patch_dapl_csv_columns.py
ssda_latent/: __init__.py  artifacts.py  cancer_type.py  config.py  data_loading.py  dataloader_factory.py  export_pipeline.py  latent.py  latent_eval.py  orchestrator.py  paths.py  prediction.py  safe_trainer.py  seed.py  split.py  summary.py  training_adapter.py
ssda_multilabel/: __init__.py  adaptation.py  cancer_type.py  config.py  dataset.py  drug_index.py  drug_normalize.py  export.py  io.py  latent.py  latent_eval.py  losses.py  masks.py  metrics.py  model.py  omics_io.py  prediction.py  prepare.py  reports.py  response_matrix.py  sample_id.py  schemas.py  seed.py  split.py  training.py
tests/: test_cancer_type.py  test_config.py  test_latent_eval.py  test_latent_prediction.py  test_multilabel_extended.py  test_multilabel_modules.py  test_multilabel_toy.py  test_paths.py  test_prediction_metrics.py  test_safe_trainer.py  test_seed.py  test_split.py
