[project]
name = "ssda4drug"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
  "torch>=2.1",
  "pandas>=2.0",
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "mypy>=1.8",
  "ruff>=0.4",
  "pandas-stubs",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true
exclude = [
  "Benchmark/",
  "trainer.py",
  "model.py",
  "utils.py",
  "experiment_shot.py",
  "experiment.py",
]

[[tool.mypy.overrides]]
module = ["utils", "trainer", "model"]
follow_imports = "skip"

[[tool.mypy.overrides]]
module = ["ssda_multilabel.model"]
follow_imports = "skip"

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = [
  "Benchmark",
  "trainer.py",
  "model.py",
  "utils.py",
  "experiment_shot.py",
  "experiment.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N"]

[tool.coverage.run]
source = ["ssda_multilabel"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 85
show_missing = true
